=== 0.2.1
* Added MemoryStore, a context-aware store based on Python RDFLib IOMemory
* Add ConjunctiveGraph, a conjunction of all graphs in a context-aware store
* Triple(nil, nil, nil) is wildcard, plus variations. No support for regular expressions.
* BNodes not graph/store specific, generated using milli-second time and sequence.

=== 0.2.0
* API and RDoc cleanup
* Removed Graph#each_with_subject, Graph#get_resource, Graph#has_bnode_identifier?
* Added Graph#predicates and Graph#objects
* Changed Graph#triples to take optional subject predicate and object to match statements.
* Renamed Graph#bind o Graph#merge!
* Graph#triples yields triples if a block is provided
* Changed Namespace#short to Namespace#prefix
* Change BNode to require a graph. Most uses go from graph.bnode, rather than BNode.new. This is required because bnodes are only equivalent within the same graph
* Added identifier to Graph, defaults to BNode. This from Python RDFlib based on TriX recommendation, see: http://www.w3.org/2004/03/trix/
* Only add triple to graph if it does not already exist in graph.
* Added Graph#contains? to look for existance of triple.
* Added Graph#eql? (and ===) to do simple check for graph equality. This version ignores BNodes (like Python RDFlib)
* Prepend "named" to named BNodes to ensure no overlap between generated and named BNodes.
* Added Graph#clone and Triple#clone
* Merge Graphs, replacing BNodes with new values from new graph.
* Remove duplicate triples when adding or merging graphs
* Added Abstract Store and List Store.
* Delegate Graph methods to store. Currently only supports :list.
* Reduce dependence on HTML namespace in RDFa parser.
* Add RDFa tests for HTML4 and HTML5

=== 0.1.5
* Update RDFa tests to use Reddy RDF/XML parser.
* All negative RDF/XML parser tests pass.
* Add Reddy::Parser, super-class of other parsers and move common code.
* Change N3Parser to use same new/parse logic as other parsers.