@@ -40,7 +40,7 @@ module Reddy
     # Get all BNodes with usage count used within graph
     def bnodes(context = nil)
       bn = {}
-      triples(Triple.new(nil, nil, nil), context) do |t|
+      triples(Triple.new(nil, nil, nil), context) do |t, ctx|
         if t.subject.is_a?(BNode)
           bn[t.subject] ||= 0
           bn[t.subject] += 1
@@ -58,7 +58,6 @@ module Reddy
     def predicates(context = nil); triples(Triple.new(nil, nil, nil), context).map {|t| t.predicate}.uniq; end
     def objects(context = nil); triples(Triple.new(nil, nil, nil), context).map {|t| t.object}.uniq; end
     def item(item, context = nil) triples(Triple.new(nil, nil, nil), context)[item]; end
-    def contains?(triple, context = nil); !triples(triple, context).empty?; end
     def self.context_aware?; false; end
     def self.formula_aware?; false; end
   end
