@@ -3,6 +3,8 @@
 * Add ConjunctiveGraph, a conjunction of all graphs in a context-aware store
 * Triple(nil, nil, nil) is wildcard, plus variations. No support for regular expressions.
 * BNodes not graph/store specific, generated using milli-second time and sequence.
+* Graph(:store) may be one of :list_store or :memory_store, which will instanciate appropriate store
+* Graph#contains? iterates over triples if object is a literal to allow for fuzzy matching.
 
 === 0.2.0
 * API and RDoc cleanup
